--- a/CaveSpaceAPI/CaveSpaceAPI.csproj
+++ b/CaveSpaceAPI/CaveSpaceAPI.csproj
@@ -10,4 +10,8 @@
     <Content Include=".docker\app.Dockerfile" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+  </ItemGroup>
+
 </Project>
