--- a/CaveSpaceAPI/docker-compose.yml
+++ b/CaveSpaceAPI/docker-compose.yml
@@ -2,12 +2,28 @@ version: "3.9"
 
 services:
   app:
+    depends_on: [ postgres ]
     build:
       dockerfile: .docker/app.Dockerfile
     ports:
       - "8080:8080"
     networks:
       - app
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_PASSWORD: "postgres"
+      PGDATA: /data/postgres
+    volumes:
+      - postgres-db:/data/postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - app
+
+volumes:
+  postgres-db:
+    driver: local
 
 networks:
   app:
